0.6.0 (01.01.2017)
================
* bugfixes
* add methods for `where` for vectors/matrices/lists
* less cryptic message about bad number of rows in `modify`/`modify_if`
* .N now is preferable to .n inside `modify` and etc.
* Functions for default dataset now invisibly return modified default dataset
* Fix logical arguments in boolean operations for criteria functions
* `%in_row%`/`%in_col%` are deprecated. Use `%row_in%`/`%col_in%` instead.
* NULL argument for criterion is removed. Use `not_na` instead.

0.5.5 (19.10.2016)
================
* numerous bugfixes
* change behavior of `if_val()` - now it dowsn't copies old values by default. There are 'other' and 'copy' instead of dots.
* add `%n_i%`, `%n_d%` - names intersection and diffs
* add `add_rows` function
* add `keep` and `except` functions for selecting/dropping columns in data.frames
* add 'where' for filtering dataset
* add `sort_asc` and `sort_desc` functions for sorting data.frames

0.5.1 (07.07.2016)
================
* initial release 
