@@ -73,7 +73,7 @@
 #' # calculate new variables
 #' .compute({
 #'     mpg_by_am = ave(mpg, am, FUN = mean)
-#'     hi_low_mpg = ifs(mpg<mean(mpg) ~ 0, default = 1)    
+#'     hi_low_mpg = ifs(mpg<mean(mpg) ~ 0, TRUE ~ 1)    
 #' })
 #' 
 #' # set labels
