@@ -154,7 +154,7 @@ default_dataset(mtcars) # set mtcars as default dataset
 # calculate new variables
 .compute({
     mpg_by_am = ave(mpg, am, FUN = mean)
-    hi_low_mpg = ifs(mpg<mean(mpg) ~ 0, default = 1)    
+    hi_low_mpg = ifs(mpg<mean(mpg) ~ 0, TRUE ~ 1)    
 })
 
 # set labels
